# vast-mcp

./: pyproject.toml
docs/superpowers/plans/: 2026-05-18-vast-mcp-implementation.md
docs/superpowers/specs/: 2026-05-18-vast-mcp-design.md
skills/: provision-instance.md  save-experiment.md
src/vast_mcp/: __init__.py  mcp_server.py  models.py  monitor.py  notifications.py  state.py  vast_client.py
tests/: conftest.py  test_integration.py  test_mcp_server.py  test_models.py  test_monitor.py  test_notifications.py  test_state.py  test_vast_client.py
